Fix content images scaling on mobile

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -149,18 +149,15 @@ body
         img
             display: block
             flex: 0 0 450px
-            height: 290px
             background: lightgray
             box-shadow: 0 5px 30px rgba(0, 0, 0, 0.15)
 
             @media screen and (max-width: $break-medium)
                 flex: 0 0 315px
-                height: 203px
 
             @media screen and (max-width: $break-small)
                 width: 450px
                 max-width: 100%
-                height: 290px
                 margin: 40px auto !important
 
 .footer
